--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -30,7 +30,7 @@ a {
 
 .title {
   color: #181919;
-  font-size: 39px;
+  font-size: 2em;
   font-weight: 700;
   font-family: Montserrat;
   padding-bottom: 2px;
