--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -120,3 +120,13 @@
 
 
 }
+
+@media (max-width: 800px) {
+.contact__inner{
+  display: flex;
+  flex-direction: column;
+  .contact{
+    height: max-content;
+  }
+}
+}
