--- a/src/scss/_works.scss
+++ b/src/scss/_works.scss
@@ -1,5 +1,5 @@
 .works {
-  height: 1160px;
+  min-height: 1160px;
 
 
 }
